# rag-pdf-chat

./: .gitignore  Makefile  README.md  pyproject.toml
src/: app.py  rag.py
