[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "langchain-ollama>=0.3.3",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.5",
    "langsmith>=0.3.42",
    "ollama>=0.4.8",
    "pypdf>=5.5.0",
    "streamlit>=1.45.1",
    "typing-extensions>=4.13.2",
]
